k8s/kong/gateway-class.yaml
# Kong GatewayClass
# @author Shanaka Jayasundera - shanakaj@gmail.com
#
# This GatewayClass tells Kubernetes that Kong will handle
# Gateway resources that reference this class.

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
